# doit

./: Cargo.toml  DOCS.md  LICENSE  README.md  config.toml
src/: agent.rs  config.rs  config_loader.rs  config_struct.rs  config_validation.rs  history.rs  lib.rs  loop_policy.rs  main.rs  path_sensitivity.rs  redaction.rs  shell.rs  start.rs  task_state.rs  text.rs  tools.rs  tui.rs  validation.rs
src/agent/: core.rs  display.rs  mod.rs  prompt.rs  session.rs  spawn.rs  tools.rs
src/agent/loops/: mod.rs  tests.rs
src/agent/session/: lifecycle.rs  mod.rs  persistence.rs  render.rs  resume.rs  tests.rs  trace.rs
src/prompts/: boss.md  default.md  developer.md  memory.md  navigator.md  qa.md  research.md  reviewer.md
src/start/: check.rs  init.rs  run_support.rs  shared.rs  status.rs  tests.rs
src/tools/: agents.rs  background.rs  browser.rs  cleanup.rs  code_analysis.rs  commands.rs  core.rs  file_ops.rs  git.rs  human.rs  memory.rs  mod.rs  rate_limit.rs  scripting.rs  scripting_guide.md  self_improvement.rs  spec.rs  test_coverage.rs  tool_result.rs  utils.rs  web.rs  workspace.rs
tests/integration/: background.rs  commands.rs  file_ops.rs  git.rs  human_test.rs  main.rs  memory.rs  redaction.rs  scripting.rs  session.rs  spawn.rs  test_coverage.rs  web.rs  workspace.rs
