[package]
name        = "do_it"
version     = "0.3.2"
edition     = "2021"
authors     = [
    "Claude Sonnet 4.6 <claude@anthropic.com>",
    "Oleksandr <oleksandr.public@gmail.com>",
]
description = "Autonomous coding agent powered by local LLMs via Ollama. Cross-platform, no shell dependency, no cloud APIs required."
repository  = "https://github.com/oleksandrpublic/doit"
homepage    = "https://github.com/oleksandrpublic/doit"
documentation = "https://github.com/oleksandrpublic/doit/blob/main/DOCS.md"
readme      = "README.md"
license     = "MIT"
keywords    = ["agent", "llm", "ollama", "automation", "coding"]
categories  = ["command-line-utilities", "development-tools"]
exclude     = [".ai/", "tasks/", "*.png", "*.jpg"]

[[bin]]
name = "do_it"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP — Ollama API, web_search, fetch_url, Telegram
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file (TOML)
toml = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Logging / tracing
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender   = "0.2"

# Filesystem traversal (find_files, search_in_files, find_references, tree)
walkdir = "2"

# AST parsing (code analysis)
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"

# Base64 encoding for vision (image → Ollama)
base64 = "0.22"

# Lazy static initialization
lazy_static = "1.5"

# Date/time handling
chrono = "0.4"

# Browser automation via Chrome DevTools Protocol
headless_chrome = "1.0"

# URL parsing and validation
url = "2"

# URL encoding (web_search, github_api)
urlencoding = "2"

# Percent encoding (fetch_url file:// handling)
percent-encoding = "2"

# Embedded scripting
rhai = "1.23.6"
regex = "1"

# Terminal UI
ratatui   = "0.30"
crossterm = "0.29"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
wiremock = "0.6"
serial_test = "3"
